# url-shortener

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  E2E_TESTING.md  Makefile  README.md  benchmark_post_request.lua  docker-compose.yml  example.http
.github/workflows/: ci.yml
k6/: perf.js
src/: main.rs  redis.rs  url_shortener.rs
