[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
base62 = "2.2.1"
env_logger = "0.11.8"
redis = { version = "0.32.2", features = ["tokio-comp", "connection-manager"] }
crc32fast = "1.5.0"
rand = "0.9.2"
tokio = { version = "1.0", features = ["full"] }
log = "0.4.27"